@@ -1,6 +1,7 @@
 === (in git)
 
 * Enhancements:
+  * Add mingw64-32-4.7.1 support (mingwbuilds 20120426-rev-186846)
   * Upgraded RubyGems to 1.8.24 on all versions of Ruby
   * Upgraded OpenSSL to version 1.0.0i
   * Upgraded libffi to version 3.0.11
